--- a/web/src/components/form/search/search.module.scss
+++ b/web/src/components/form/search/search.module.scss
@@ -3,16 +3,29 @@
 .input-search {
   position: relative;
 
-  .icon {
+  :global(.icon) {
     position: absolute;
     inset: 0 auto 0 0;
+    display: flex;
+    align-items: center;
+    padding: 0 0 0 12px;
+
+    @include theme('text-input') {
+      color: t('icon');
+    }
+
+    svg {
+      height: 16px;
+      width: 16px;
+    }
   }
 
   input {
-    padding: 10px 12px;
+    padding: 10px 12px 10px 40px;
     font-size: 14px;
-    line-height: 20px;
+    line-height: 16px;
     border-radius: 4px;
+    border: none;
 
     @include theme('text-input') {
       background-color: t('bg');
@@ -20,6 +33,8 @@
     }
 
     &::placeholder {
+      line-height: 16px;
+
       @include theme('text-input') {
         color: t('placeholder');
       }
