Finish login modal

--- a/web/src/components/button/button.module.scss
+++ b/web/src/components/button/button.module.scss
@@ -10,6 +10,7 @@
   transition: background-color color 0.1s;
   display: flex;
   align-items: center;
+  border: none;
 
   svg {
     width: 16px;
