--- a/web/src/components/datatable/body/row.module.scss
+++ b/web/src/components/datatable/body/row.module.scss
@@ -3,11 +3,12 @@
 .header-row,
 %row-base {
   margin: 0;
-  font-size: 14px;
+  font-size: 12px;
   line-height: 20px;
   font-weight: bold;
   padding: 12px 16px;
   text-align: left;
+  text-transform: uppercase;
 
   @include theme('table') {
     background-color: t('bg-header-row');
@@ -24,6 +25,7 @@
 
 .data-row {
   padding: 12px 16px;
+  font-size: 14px;
 
   @include theme('table') {
     border-bottom: 1px solid t('border-data-row');
